--- a/Lab09/bin/it/polito/tdp/borders/Borders.fxml
+++ b/Lab09/bin/it/polito/tdp/borders/Borders.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -10,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.borders.BordersController">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.102" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.borders.BordersController">
    <top>
       <Label text="Country Borders" BorderPane.alignment="CENTER">
          <font>
@@ -38,6 +39,19 @@
                </children>
                <VBox.margin>
                   <Insets top="15.0" />
+               </VBox.margin>
+            </HBox>
+            <HBox alignment="CENTER_LEFT">
+               <children>
+                  <ComboBox fx:id="comboStato" prefWidth="150.0">
+                     <HBox.margin>
+                        <Insets left="60.0" right="30.0" />
+                     </HBox.margin>
+                  </ComboBox>
+                  <Button mnemonicParsing="false" onAction="#doTrovaVicini" text="Trova tutti i vicini" />
+               </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="30.0" top="10.0" />
                </VBox.margin>
             </HBox>
             <TextArea fx:id="txtResult" editable="false" wrapText="true">
